--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">About Me</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
+							<li><a href="#bio" class="active">About Me</a></li>
+							<li><a href="#services">Services</a></li>
+							<li><a href="#second">Location</a></li>
 							<li><a href="#cta">Get Started</a></li>
 						</ul>
 					</nav>
@@ -39,7 +39,7 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="bio" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
@@ -73,7 +73,7 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="services" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
 								</header>
@@ -174,13 +174,6 @@
 								<dt>Email</dt>
 								<dd><a href="#">karen@kmy-nd.ca</a></dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
 						</section>
 						<p class="copyright">&copy; 2023 kmy-nd.ca Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
