Links and content

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 						<span class="logo"><img src="images/kmy-nd-nobg.png" width="200px" height="200px" 	alt="a cartoon representation of Dr. Karen Maloney-Younker, ND" /></span>
 						<h1>Dr. Karen Maloney-Younker, ND</h1>
 						<p>A full service naturopathic clinic and dispensary, also offering acute care and home visits.</p>
-						<p>I offer care for many different conditions but have a special passion for treating children and women planning pregnancies and wanting naturopathic support during pregnancy.</p>
+						<p>I offer care for many different conditions but have a special passion for treating children, women's hormonal concerns and mental health.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#bio" class="active">About Me</a></li>
-							<li><a href="#services">Services</a></li>
-							<li><a href="#second">Location</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#modalities">Modalities</a></li>
+							<li><a href="#location">Location</a></li>
+							<li><a href="#contact">Contact Me</a></li>
 						</ul>
 					</nav>
 
@@ -45,111 +45,83 @@
 										<header class="major">
 											<h2>A little about me</h2>
 										</header>
-										<p>Karen Maloney-Younker is a licensed naturopathic doctor. She graduated in 2014 from the
-											Canadian College of Naturopathic Medicine(CCNM) in Toronto and has been practicing at Live
-											Well since becoming board certified with the College of Naturopaths of Ontario(CoNO). She is a
-											member of the Canadian Association of Naturopathic Doctors(CAND) and the Ontario
-											Association of Naturopathic Doctors(OAND).</p>
+										<p>I'm a licensed naturopathic doctor, and a graduate of the
+											<a href="https://ccnm.edu/">Canadian College of Naturopathic Medicine (CCNM)</a> in Toronto. I've been practising at Live
+											Well since becoming board certified with the <a href="https://www.collegeofnaturopaths.on.ca/">College of Naturopaths of Ontario (CoNO)</a>. I am a
+											member of the <a href="https://www.cand.ca/">Canadian Association of Naturopathic Doctors (CAND)</a> and the <a href="https://oand.org/">Ontario
+											Association of Naturopathic Doctors (OAND)</a>.</p>
 											<p>
 											Naturopathic doctors use a number of treatment modalities including: botanical medicine,
 											homeopathy, nutrition and supplements, acupuncture and Asian medicine as well as physical
 											modalities and lifestyle counseling and support. The goal of treatment is to support the body&#39;s
 											own ability to heal and to use the aforementioned modalities to gently bring the body back into
-											balance. Karen treats many health conditions, with a special interest in digestive health,
+											balance. I treat many health conditions, with a special interest in digestive health,
 											musculoskeletal injuries, mental health, and pediatric health. Patients of all ages and
 											backgrounds are welcome.</p>
-											<p></p>Prior to studying naturopathy, Karen worked as a personal trainer working with clients to help
-											them improve their health, fitness and athletic performance and rehabilitate injuries. She
+											<p>Prior to studying naturopathy, I worked as a personal trainer working with clients to help
+											them improve their health, fitness and athletic performance and to rehabilitate injuries. I
 											graduated from Western University with a degree in psychology and kinesiology.
-											Karen has lived in St Catharines for over twenty years, she lives with her husband and 2 sons.
-											When she is not working she can be found camping and hiking with her family, reading Can-lit,
+											I have lived in St Catharines for over twenty years, and live with my husband and 2 sons.
+											When I am not working, I can be found camping and hiking with my family, reading Can-lit,
 											listening to podcasts and cooking.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										
 									</div>
-									<span class="image"><img src="images/kmy.jpg" alt="" /></span>
+									<span class="image"><img src="images/kmy.jpg" alt="photograph of Dr. Karen Maloney-Younker, ND" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
-							<section id="services" class="main special">
+							<section id="modalities" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Modalities</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
+										<span class="icon solid major style1 fa-flask"></span>
+										<h3>Homeopathy</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
+										<span class="icon solid major style3 fa-thermometer"></span>
+										<h3>Acupuncture &amp; Traditional Chinese Medicine</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
+										<span class="icon solid major style5 fa-cubes"></span>
+										<h3>Nutrition</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon solid major style4 fa-leaf"></span>
+										<h3>Botanical Medicine</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon solid major style5 fa-users"></span>
+										<h3>Lifestyle Counselling</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="location" class="main special">
+								
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Location</h2>
+									<p>My office is located in Live Well Osteopathy &amp; Massage Therapy at:<br />250 Carlton Street, St. Catharines, Ontario</p>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								<div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=250 carlton street, st catharines, on&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="contact" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Contact Me</h2>
+									<p>To make an appointment, please call (289) 362-2444</p>
+									<p>For more information, please email: karen&commat;kmy-nd.ca</p>
 								</header>
 								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
 								</footer>
 							</section>
 
@@ -158,13 +130,6 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
 							<h2>Dr. Karen Maloney-Younker, ND</h2>
 							<dl class="alt">
 								<dt>Address</dt>
@@ -172,7 +137,7 @@
 								<dt>Phone</dt>
 								<dd>(289) 362-2444</dd>
 								<dt>Email</dt>
-								<dd><a href="#">karen@kmy-nd.ca</a></dd>
+								<dd>karen&commat;kmy-nd.ca</dd>
 							</dl>
 						</section>
 						<p class="copyright">&copy; 2023 kmy-nd.ca Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
