--- a/index.html
+++ b/index.html
@@ -79,27 +79,22 @@
 									<li>
 										<span class="icon solid major style1 fa-flask"></span>
 										<h3>Homeopathy</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-thermometer"></span>
 										<h3>Acupuncture &amp; Traditional Chinese Medicine</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-cubes"></span>
 										<h3>Nutrition</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon solid major style4 fa-leaf"></span>
 										<h3>Botanical Medicine</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-users"></span>
 										<h3>Lifestyle Counselling</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
 							</section>
@@ -109,7 +104,7 @@
 								
 								<header class="major">
 									<h2>Location</h2>
-									<p>My office is located in Live Well Osteopathy &amp; Massage Therapy at:<br />250 Carlton Street, St. Catharines, Ontario</p>
+									<p>My office is located in Live Well Massage Therapy &amp; Osteopathy at:<br /><strong>250 Carlton Street, St. Catharines, Ontario</strong></p>
 								</header>
 								<div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=250 carlton street, st catharines, on&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
 							</section>
