--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/kmy-nd-nobg.png" width="200px" height="200px" 	alt="a cartoon representation of Dr. Karen Maloney-Younker, ND" /></span>
+						<span class="logo"><img src="images/kmy-nd-logo.png" width="200px" height="200px" 	alt="a cartoon representation of Dr. Karen Maloney-Younker, ND" /></span>
 						<h1>Dr. Karen Maloney-Younker, ND</h1>
 						<p>A full service naturopathic clinic and dispensary, also offering acute care and home visits.</p>
 						<p>I offer care for many different conditions but have a special passion for treating children, women's hormonal concerns and mental health.</p>
