--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
 									<li>
 										<span class="icon solid major style1 fa-flask"></span>
 										<h3>Homeopathy</h3>
+										<p>Very diluted plant and mineral remedies that consider the whole person and work to stimulate the body&#39;s own ability to heal.</p>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-thermometer"></span>
 										<h3>Acupuncture &amp; Traditional Chinese Medicine</h3>
+										<p>Fine needles are inserted at key points on the body to increase the flow of blood and qi to stimulate healing. Acupuncture can be used on its own or in conjunction with traditional herbal formulas.</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-cubes"></span>
 										<h3>Nutrition</h3>
+										<p>An assessment of food intolerances, nutrient deficiencies and the best way to make these	adjustments to diet or through supplementation.</p>
 									</li>
 									<li>
 										<span class="icon solid major style4 fa-leaf"></span>
@@ -99,6 +102,7 @@
 									<li>
 										<span class="icon solid major style5 fa-users"></span>
 										<h3>Lifestyle Counselling</h3>
+										<p>Support to make health improvements through stress reduction, improved sleep, healthy habits	and a place to feel supported dealing with life&#39;s challenges.</p>
 									</li>
 								</ul>
 							</section>
@@ -117,8 +121,7 @@
 							<section id="contact" class="main special">
 								<header class="major">
 									<h2>Contact Me</h2>
-									<p>To make an appointment, please call (289) 362-2444</p>
-									<p>For more information, please email: karen&commat;kmy-nd.ca</p>
+									<p>To make an appointment or more information, please call (289) 362-2444</p>
 								</header>
 								<footer class="major">
 								</footer>
@@ -135,8 +138,6 @@
 								<dd>250 Carlton Street &bull; St. Catharines, ON L2N 1B4 &bull; Canada</dd>
 								<dt>Phone</dt>
 								<dd>(289) 362-2444</dd>
-								<dt>Email</dt>
-								<dd>karen&commat;kmy-nd.ca</dd>
 							</dl>
 						</section>
 						<p class="copyright">&copy; 2023 kmy-nd.ca Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
