--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 									<li>
 										<span class="icon solid major style4 fa-leaf"></span>
 										<h3>Botanical Medicine</h3>
+										<p>Using medicinal plants individually or in combination as a tea, a tincture, or topically to support healing in the body.</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-users"></span>
