--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 <html>
 	<head>
 		<title>Dr. Karen Maloney-Younker, ND</title>
-		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="title" content="Dr. Karen Maloney-Younker, ND">
+		<meta name="description" content="Official page for Dr. Karen Maloney-Younker, ND, including background, qualifications, experience, location, and how to book an appointment">
+		<meta name="keywords" content="Naturopath, St. Catharines, Natural Medicine, Naturopathic medicine, homeopathy, botanical medicine, nutrition, acupuncture, traditional Chinese medicine, lifestyle counseling">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
 		<link rel="stylesheet" href="assets/css/main.css" /> 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
